tests/baselines/reference/duplicateLabel1.errors.txt
tests/cases/compiler/duplicateLabel1.ts(2,1): error TS1114: Duplicate label 'target'.


==== tests/cases/compiler/duplicateLabel1.ts (1 errors) ====
    target:
    target:
    ~~~~~~
!!! error TS1114: Duplicate label 'target'.
    while (true) {
    }